# habits_fastapi

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  requirements.txt1
alembic/: env.py
alembic/versions/: 12430ddacb49_init_tables.py  21d3b4abcdc9_initial_tables.py  5380b5e6a489_init.py  7b494976859b_initial_tables.py  b687370d1473_initial.py
app/: __init__.py  docker-entrypoint.sh  main.py
app/api/: auth_api.py  habits_api.py  user_api.py
app/database/: __init__.py  connect.py  models.py  transactions.py
app/schemas/: habits_sch.py  token_sch.py  tweets.py  users.py  users_sch.py
app/tests/: fixtures.py  test_get_token.py  test_habit_opers.py  test_token_opers.py  test_user_opers.py
app/utils/: __init__.py  create_access_token.py  depends.py  filling_data_base.py  password_oper.py  schedule.py  send_message.py  send_message_tg.py  token.py  token_oper.py  token_operations.py
app/views/: __init__.py  auth.py  books.py  user.py
config_data/: config.py
