[tool.poetry]
name = "habits-fastapi"
version = "0.1.0"
description = ""
authors = ["Mikhail Sobolev <kseon@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
aiosqlite = "0.20.0"
alembic = "1.13.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
apscheduler = "3.10.4"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
attrs = "23.2.0"
bcrypt = "4.0.1"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.6.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
crashtest = "0.4.1"
cryptography = "42.0.8"
distlib = "0.3.8"
dnspython = "2.6.1"
dulwich = "0.21.7"
email-validator = "2.1.1"
exceptiongroup = "1.2.1"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
frozenlist = "1.4.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
importlib-metadata = "8.0.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jeepney = "0.8.0"
jinja2 = "3.1.4"
jsonwebtoken = "1.0.0"
keyring = "24.3.1"
mako = "1.3.5"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
more-itertools = "10.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
orjson = "3.10.4"
packaging = "24.1"
passlib = "1.7.4"
pexpect = "4.9.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
psycopg2-binary = "2.9.9"
ptyprocess = "0.7.0"
pycparser = "2.22"
pydantic = "2.7.3"
pydantic-core = "2.18.4"
pygments = "2.18.0"
pyjwt = "2.8.0"
pyproject-hooks = "1.1.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytz = "2024.1"
pyyaml = "6.0.1"
rapidfuzz = "3.9.3"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
secretstorage = "3.3.3"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.30"
starlette = "0.37.2"
tomli = "2.0.1"
tomlkit = "0.12.5"
trove-classifiers = "2024.7.1"
typer = "0.12.3"
typing-extensions = "4.12.2"
tzlocal = "5.2"
ujson = "5.10.0"
urllib3 = "2.2.2"
uvicorn = "0.29.0"
uvloop = "0.19.0"
virtualenv = "20.26.3"
watchfiles = "0.22.0"
websockets = "12.0"
yarl = "1.9.4"
zipp = "3.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
